k8s/overlays/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopease-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: shopease.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8002

          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8003

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
